tests/NormalTests/paczka1/small_fuzzy/50577966.err
Error in line 3: wGk7Jt7W9 S337 7,9
Error in line 11: A62 A10 17,0
Error in line 16: wGk7Jt7W9 A62 94,55
